remove spaces, comments, and fixed alignment

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -9,12 +9,6 @@ body {
   
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-    
-}
-
 .guest-container {
   display: flex;
   flex-direction: column;
@@ -42,7 +36,7 @@ code {
   justify-content: space-around;
   flex-flow: row;
   padding: 1px;
-  margin: 10px 20px;
+  margin: 10px 30px;
   background: #aa6a71;
   font-weight: bold;
   color: white;
@@ -54,13 +48,11 @@ code {
   color: #F4F4F4;
   text-decoration: none;
   font-size: 17px;
-  width: 25%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
-  text-align: justify; /* If you want the text to be centered */
+  width: 25%; 
+  text-align: center; /* If you want the text to be centered */
+  
 }
 
-/* .navbar a:hover {
-  background-color: #000;
-} */
 
 .navbar a.active {
   background-color: #F6BDD1;
@@ -74,8 +66,7 @@ code {
     float: none;
     display: block;
     width: 90%;
-    text-align: left; /* If you want the text to be left-aligned on small screens */
-   
+    text-align: left; 
   }
 }
 
@@ -106,11 +97,27 @@ code {
   text-align: center justify;
 } 
 
-input {
-  color: yellow;
-  text-align: center;
+.alignment-form {
+  display: inline-block;
 }
 
+.search-box {
+  margin: 5px;
+}
+
+.name-box {
+  float: right;
+}
+.submit-box {
+  display: inline;
+  flex-direction: column;
+}
+
+label {
+  text-align: left;
+  padding: 8px;
+
+}
 
 select {
   padding:5px;
@@ -126,4 +133,11 @@ button {
   font-weight:600;
   border-radius:5px;
   border: 1px solid #000000;
+  margin: 5px;
 }
+
+input {
+  display: inline-block;
+  
+}
+
